--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -2,7 +2,10 @@
 name = "tarpc-plugins"
 version = "0.13.1"
 rust-version = "1.65.0"
-authors = ["Adam Wright <adam.austin.wright@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>"]
+authors = [
+    "Adam Wright <adam.austin.wright@gmail.com>",
+    "Tim Kuehn <timothy.j.kuehn@gmail.com>",
+]
 edition = "2021"
 license = "MIT"
 documentation = "https://docs.rs/tarpc-plugins"
@@ -31,4 +34,4 @@ proc-macro = true
 assert-type-eq = "0.1.0"
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
-tarpc = { path = "../tarpc", features = ["serde1"] }
+tarpc = { package = "tarpc-copy", path = "../tarpc", features = ["serde1"] }
