--- a/tarpc/Cargo.toml
+++ b/tarpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tarpc"
-version = "0.34.0"
+name = "tarpc-copy"
+version = "0.34.0+copy.33b0b21"
 rust-version = "1.65.0"
 authors = [
     "Adam Wright <adam.austin.wright@gmail.com>",
@@ -80,6 +80,7 @@ tokio-serde = { version = "0.9", features = ["json", "bincode"] }
 trybuild = "1.0"
 tokio-rustls = "0.25"
 rustls-pemfile = "2.0"
+tarpc = { version = "0.34", features = ["full"] }
 
 [package.metadata.docs.rs]
 all-features = true
