--- a/tarpc/Cargo.toml
+++ b/tarpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tarpc-copy"
-version = "0.34.0-copy.f81ddd6"
+version = "0.34.0-copy.33b0b21"
 rust-version = "1.65.0"
 authors = [
     "Adam Wright <adam.austin.wright@gmail.com>",
@@ -10,7 +10,7 @@ edition = "2021"
 license = "MIT"
 documentation = "https://docs.rs/tarpc"
 homepage = "https://github.com/google/tarpc"
-repository = "https://github.com/google/tarpc"
+repository = "https://github.com/andeya/tarpc"
 keywords = ["rpc", "network", "server", "api", "microservices"]
 categories = ["asynchronous", "network-programming"]
 readme = "README.md"
